--- a/ClientSide/Page.html
+++ b/ClientSide/Page.html
@@ -1,8 +1,115 @@
 <html>
 <head>
-	<title></title>
+
+	<title>BAP Automatisering</title>
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="BootstrapOverride.css">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	
+
 </head>
 <body>
+	<h1 class="text-center">BAP Automatisering</h1>
+	<div class="container-fluid"> <!-- -fluid to make it use full width of page//-->
 
+ 	 	<div class="row">
+ 	 		<div class="col-md-4 col-lg-4 col-sm-4" style="background-color:yellow;">
+ 	 			<div id="SearchBar" class="input-group searchbar-fix">
+    				<input id="SearchTerm" type="text" placeholder="Search" class="form-control">
+    					<div class="input-group-btn">
+    						<button class="btn btn-default" type="submit">
+    							<i class="glyphicon glyphicon-search">
+    							</i>
+    						</button>
+    					</div>
+				</div>
+				<div class="btn-group-vertical" role="group">
+
+					
+					<div class="input-group list-fix">
+					    <div class="panel panel-default">
+					      	<div class="panel-heading">
+					        	<h4 class="panel-title">
+					          		<a data-toggle="collapse" href="#collapse1">
+					          			Bryan Lameir	
+					          		</a>
+					        	</h4>
+					      	</div>
+					      	<div id="collapse1" class="panel-collapse collapse">
+					        	<div class="panel-body"><p>Project name</p><p>smth</p><p>smth else</p>
+					        	</div>
+					      	</div>
+					    </div>
+					    <span class="input-group-btn">
+					    <button class="btn btn-default" type="submit">
+    							<i class="glyphicon glyphicon-download-alt">
+    							</i>
+    					</button>
+    					</span>
+					</div>
+					
+
+					<div class="input-group list-fix">
+					    <div class="panel panel-default">
+					      	<div class="panel-heading">
+					        	<h4 class="panel-title">
+					          		<a data-toggle="collapse" href="#collapse2">
+					          			Kay Elst	
+					          		</a>
+					        	</h4>
+					      	</div>
+					      	<div id="collapse2" class="panel-collapse collapse">
+					        	<div class="panel-body"><p>Project name</p><p>smth</p><p>smth else</p>
+					        	</div>
+					      	</div>
+					    </div>
+					    <span class="input-group-btn">
+					    <button class="btn btn-default" type="submit">
+    							<i class="glyphicon glyphicon-download-alt">
+    							</i>
+    					</button>
+    					</span>
+					</div>
+
+
+					<div class="input-group list-fix">
+					    <div class="panel panel-default">
+					      	<div class="panel-heading">
+					        	<h4 class="panel-title">
+					          		<a data-toggle="collapse" href="#collapse3">
+					          			Bryan Lameir	
+					          		</a>
+					        	</h4>
+					      	</div>
+					      	<div id="collapse3" class="panel-collapse collapse">
+					        	<div class="panel-body"><p>Project name</p><p>smth</p><p>smth else</p>
+					        	</div>
+					      	</div>
+					    </div>
+					    <span class="input-group-btn">
+					    <button class="btn btn-default" type="submit">
+    							<i class="glyphicon glyphicon-download-alt">
+    							</i>
+    					</button>
+    					</span>
+					</div>
+
+
+ 	 			</div>
+ 	 		</div>
+ 	 		<div class="col-md-8 col-lg-8 col-sm-8" style="background-color:pink;">
+ 	 			other content
+ 	 		</div>
+ 	 	</div> 
+ 	</div> 
 </body>
 </html>
