--- a/ClientSide/Page.html
+++ b/ClientSide/Page.html
@@ -2,6 +2,12 @@
 <head>
 
 	<title>BAP Automatisering</title>
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+
+	<script src="app.js"></script>
+
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 
 	<!-- Latest compiled and minified CSS -->
@@ -14,15 +20,27 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+
 	
 
 </head>
-<body>
-	<h1 class="text-center">BAP Automatisering</h1>
+<body ng-app="myapp" ng-controller="myCtrl">
+	<div class="page-header text-center">
+  		<div class="btn-toolbar pull-right">
+    		<div class="btn-group">
+     	 		<button type='button' class="btn btn-lg btn-success SignIn-fix">
+     	 		SignIn
+     	 		</button>
+    		</div>
+  		</div>
+  	<h2>BAP Automatisering</h2>
+  	<div class="clearfix"></div>
+	</div>
+	
 	<div class="container-fluid"> <!-- -fluid to make it use full width of page//-->
 
  	 	<div class="row">
- 	 		<div class="col-md-4 col-lg-4 col-sm-4" style="background-color:yellow;">
+ 	 		<div class="col-md-4 col-lg-2 col-sm-4 col-xs-4" style="background-color:yellow;">
  	 			<div id="SearchBar" class="input-group searchbar-fix">
     				<input id="SearchTerm" type="text" placeholder="Search" class="form-control">
     					<div class="input-group-btn">
@@ -106,8 +124,33 @@
 
  	 			</div>
  	 		</div>
- 	 		<div class="col-md-8 col-lg-8 col-sm-8" style="background-color:pink;">
- 	 			other content
+ 	 		<div class="col-md-8 col-lg-10 col-sm-8 col-xs-8" style="background-color:lightblue;">
+ 	 			<div>ProjectName Student name</div>
+	 			<div class="btn-group btn-group-justified" role="group">
+					<div class="btn-group" role="group">
+					    <button ng-click="value = '1'" type="button" class="btn btn-default">RepoStats
+					    </button>
+					</div>
+					<div ng-click="value = '2'" class="btn-group" role="group">
+					    <button type="button" class="btn btn-default">RepoHulp
+					    </button>
+					</div>
+					<div ng-click="value = '3'" class="btn-group" role="group">
+					    <button type="button" class="btn btn-default">RepoHulp
+					    </button>
+					</div>
+				</div>
+				<div>
+					<div ng-show="value =='1'">
+						11111111111111111
+					</div>
+					<div ng-show="value =='2'">
+						22222222222222222
+					</div>
+					<div ng-show="value =='3'">
+						33333333333333333
+					</div>
+				</div>
  	 		</div>
  	 	</div> 
  	</div> 
